--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,12 @@
 .button {
-    width: 100px;
-    height: 45px;
+    background-color: yellow;
     color: white;
-    border-radius: 8px;
-    background-color: blue;
+    padding: 5px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    border-radius: 4px;
 }
