--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,3 +7,24 @@
     align-items: center;
     flex-direction: column;
 }
+
+select {
+    padding: 0.5rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 1rem;
+    background-color: #fff;
+    color: #333;
+}
+
+select:focus {
+    outline: none;
+    border-color: #0077ff;
+    box-shadow: 0 0 3px rgba(0, 119, 255, 0.4);
+}
+
+option {
+    background-color: #fff;
+    color: #333;
+}
